--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,10 +28,18 @@
   }
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+.primary-button {
+  @apply flex items-center justify-center gap-x-2 rounded-xl bg-primary-black px-8 py-[23px] text-base text-primary-white;
 }
 
 /* --------- Custom Utilities ----------- */
@@ -48,9 +56,46 @@ body {
   @apply flex items-center justify-between;
 }
 
+/* Button Bubble on Hover */
+.hover-bubble {
+  z-index: 1;
+  position: relative;
+  background-color: transparent;
+  overflow: hidden;
+  transition: color 0.4s ease-in-out;
+}
+
+.hover-bubble::before {
+  content: "";
+  z-index: -1;
+  position: absolute;
+  top: 100%;
+  right: 100%;
+  width: 2.5em;
+  height: 1em;
+  border-radius: 50%;
+  background-color: #232323;
+  transform-origin: center;
+  transform: translate3d(50%, -50%, 0) scale3d(0, 0, 0);
+  transition: transform 0.45s ease-in-out;
+}
+
+.hover-bubble:hover {
+  cursor: pointer;
+  color: #f8fafc;
+}
+
+.hover-bubble:hover::before {
+  transform: translate3d(50%, -50%, 0) scale3d(15, 15, 15);
+}
+
 /* Underline on Hover effect */
 .hover-underline {
   position: relative;
+}
+
+.border-red {
+  @apply border border-red-500;
 }
 
 .hover-underline::before {
