[update] custom designer text styling v1 added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Roboto&family=Pacifico&display=swap");
+
+@font-face {
+  font-family: "Maxcellent";
+  src: url("/fonts/Maxcellent.otf") format("truetype");
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
