--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -227,3 +227,9 @@ body {
   font-family: var(--font-uncut-sans) !important;
   font-size: 1.07rem;
 }
+
+.ant-tour-next-btn {
+  background-color: var(--primary-black) !important;
+  color: var(--primary-white) !important;
+  padding: 0.8rem 1.2rem !important;
+}
