--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -237,3 +237,22 @@ body {
 .ant-tag {
   font-family: var(--font-uncut-sans) !important;
 }
+
+textarea {
+  font-family: var(--font-uncut-sans) !important;
+}
+
+.ant-input * {
+  font-family: var(--font-uncut-sans) !important;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.hide-scroll::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hide-scroll {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
