--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,6 +61,10 @@ body {
   box-sizing: border-box;
 }
 
+/* div {
+  border: 1px solid red;
+} */
+
 /* --------- Custom Utilities ----------- */
 
 .flex-center-start {
@@ -118,6 +122,20 @@ body {
 
 .hover-bubble:hover::before {
   transform: translate3d(50%, -50%, 0) scale3d(15, 15, 15);
+}
+
+@media screen and (max-width: 768px) {
+  .hover-bubble {
+  }
+
+  .hover-bubble::before {
+  }
+
+  .hover-bubble:hover {
+  }
+
+  .hover-bubble:hover::before {
+  }
 }
 
 /* Underline on Hover effect */
