{Update} Responsiveness added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -167,6 +167,7 @@ body {
 
 /* Global page transition loader styles */
 .global-loader {
+  text-align: center;
   width: fit-content;
   font-weight: bold;
   font-family: monospace;
@@ -193,6 +194,24 @@ body {
   );
   -webkit-background-clip: text;
   background-clip: text;
+}
+
+@media screen and (max-width: 768px) {
+  .global-loader {
+    text-align: center;
+    width: fit-content;
+    font-weight: bold;
+    font-family: monospace;
+    font-size: 30px;
+    background: linear-gradient(
+        135deg,
+        #0000 calc(50% - 0.5em),
+        #000 0 calc(50% + 0.5em),
+        #0000 0
+      )
+      right/300% 100%;
+    animation: l22 2s infinite;
+  }
 }
 
 @keyframes l22 {
