[Update] Multiple quantity and size options created for quote

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -282,3 +282,8 @@ textarea {
 .ant-empty {
   font-family: var(--font-uncut-sans) !important;
 }
+
+.ant-input,
+.ant-input * {
+  font-family: var(--font-uncut-sans);
+}
